--- a/views/common/layouts/admin.html.twig
+++ b/views/common/layouts/admin.html.twig
@@ -1,10 +1,10 @@
 {% extends '/common/layouts/head.html.twig' %}
 {% import '/common/components/admin.html.twig' as admin %}
 
-{% block title %}Админка {% if setting.title is defined and settings.title.value | length > 0 %} | {{ settings.title.value }}{% endif %}{% endblock %}
+{% block title %}Панель управления {% if setting.title is defined and settings.title.value | length > 0 %} | {{ settings.title.value }}{% endif %}{% endblock %}
 
 {% block body %}
     <div class="admin-panel-wrapper">
-        {{ admin.admin(editMode, dataType, pageList, menu, settings, formfields, additionalCollectionName, additionalCollection) }}
+        {{ admin.admin(editMode, adminType, dataType, pageList, menu, settings, formfields, additionalCollectionName, additionalCollection) }}
     </div>
 {% endblock %}
